modules/security/main.tf
##########################################
# EKS Security Group
##########################################

resource "aws_security_group" "eks" {

  name = "${local.name}-eks-sg"

  description = "Security Group for EKS Cluster"

  vpc_id = var.vpc_id

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-eks-sg"
    }
  )

}

##########################################
# Database Security Group
##########################################

resource "aws_security_group" "database" {

  name = "${local.name}-db-sg"

  description = "Database Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 5432

    to_port = 5432

    protocol = "tcp"

    security_groups = [
      aws_security_group.eks.id
    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-db-sg"
    }
  )

}

##########################################
# Redis Security Group
##########################################

resource "aws_security_group" "redis" {

  name = "${local.name}-redis-sg"

  description = "Redis Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 6379

    to_port = 6379

    protocol = "tcp"

    security_groups = [
      aws_security_group.eks.id
    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-redis-sg"
    }
  )

}

##########################################
# OpenSearch Security Group
##########################################

resource "aws_security_group" "opensearch" {

  name = "${local.name}-opensearch-sg"

  description = "OpenSearch Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 443

    to_port = 443

    protocol = "tcp"

    security_groups = [
      aws_security_group.eks.id
    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-opensearch-sg"
    }
  )

}
